deploy/k8s/app-ingress.yaml
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: huinong
  labels:
    app: app-ingress
spec:
  ingressClassName: higress
  rules:
    - host: appbackend.huinong.com
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: appuser-api
                port:
                  number: 10001
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: appuser-api
                port:
                  number: 10001
          - path: /api/v1/lease
            pathType: Prefix
            backend:
              service:
                name: lease-api
                port:
                  number: 10004
          - path: /api/v1/leaseproduct
            pathType: Prefix
            backend:
              service:
                name: leaseproduct-api
                port:
                  number: 10006
          - path: /api/v1/loan
            pathType: Prefix
            backend:
              service:
                name: loan-api
                port:
                  number: 10003
          - path: /api/v1/loanproduct
            pathType: Prefix
            backend:
              service:
                name: loanproduct-api
                port:
                  number: 10005
