deploy/k8s/ingress.yaml
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: huinong
  labels:
    app: backend
spec:
  ingressClassName: higress
  rules:
    - host: backend.huinong.com
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: appuser-api
                port:
                  number: 10001
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: appuser-api
                port:
                  number: 10001
