deploy/k8s/oa-ingress.yaml
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oa-ingress
  namespace: huinong
  labels:
    app: oa-ingress
spec:
  ingressClassName: higress
  rules:
    - host: oabackend.huinong.com
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: oauser-api
                port:
                  number: 10002
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: oauser-api
                port:
                  number: 10002
          - path: /api/v1/lease
            pathType: Prefix
            backend:
              service:
                name: lease-api
                port:
                  number: 10004
          - path: /api/v1/leaseproduct
            pathType: Prefix
            backend:
              service:
                name: leaseproduct-api
                port:
                  number: 10006
          - path: /api/v1/loan
            pathType: Prefix
            backend:
              service:
                name: loan-api
                port:
                  number: 10003
          - path: /api/v1/loanproduct
            pathType: Prefix
            backend:
              service:
                name: loanproduct-api
                port:
                  number: 10005
          - path: /api/v1/admin/lease
            pathType: Prefix
            backend:
              service:
                name: lease-api
                port:
                  number: 10004
          - path: /api/v1/admin/leaseproduct
            pathType: Prefix
            backend:
              service:
                name: leaseproduct-api
                port:
                  number: 10006
          - path: /api/v1/admin/loan
            pathType: Prefix
            backend:
              service:
                name: loan-api
                port:
                  number: 10003
          - path: /api/v1/admin/loanproduct
            pathType: Prefix
            backend:
              service:
                name: loanproduct-api
                port:
                  number: 10005
